add authentication in UtilisateurController, changed password in Utilisateur, add AutoMapper, changed startup

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,5 +1,8 @@
 {
-  
+  "AppSettings": {
+    "Secret": "TestwithDohaAndOuissal"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -8,4 +11,5 @@
     }
   },
   "AllowedHosts": "*"
+
 }
